--- a/style.css
+++ b/style.css
@@ -88,10 +88,10 @@ color: white;
 
 .hamburger-background{
   width: 100%;
-  height: 88.5%;
+  height: 100%;
   position: absolute;
   z-index: -10000;
-
+top:-10%;
 }
 .hamburger-menu{
   height: 500px;
@@ -129,7 +129,7 @@ color: white;
   height: 500px;
   z-index: -20000;
   position: absolute;
-  top: 15%;
+  top: 5%;
   left: 37%;
   display: flex;
   justify-content: space-around;
@@ -462,12 +462,15 @@ opacity: 0.8;
 .footer-div-two{
   text-align: center;
 }
-@media only screen and (max-width:1700px) {
+@media only screen and (max-width:1800px) {
   footer{
     margin-top: 600px;
   }
 
 }
+
+
+
   @media only screen and (max-width:1500px) {
  
     .articles{
@@ -531,13 +534,19 @@ opacity: 0.8;
   
     }
   }
+  @media only screen and (max-width:1100px) {
+
+   footer{
+    margin-top:889px;
+   }
+  }
 
   @media only screen and (max-width:1100px) {
     .articles{
       margin-top:850px;
     }
     footer{
-      margin-top:1600px;
+      margin-top:889px;
     }
   
     .articles-header{
@@ -608,7 +617,7 @@ opacity: 0.8;
   
     }
   }
-  @media only screen and (max-width:768px) {
+  @media only screen and (max-width:858px) {
     .features-text{
       margin-top:400px;
       margin-bottom: 50px;
@@ -616,4 +625,7 @@ opacity: 0.8;
        .inv-btn-two{
         font-size: 1.5rem;
        }
+       footer{
+        margin-top:1800px;
+      }
   }
